# Unlimited-OCR-ROCm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BLOG.md  BLOG_CN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  README_CN.md  RECOVERY.md  ROADMAP.md  SECURITY.md  docker-compose.yml  model_card.json  pyproject.toml  pytest.ini  requirements-dev.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
adapter/: run_adapter.py
configs/: chat_template.jinja
docs/: ARCHITECTURE.md  BENCHMARK.md  COMMUNITY_BENCHMARKS.md  PARITY.md  PROGRESS_2026-07-03.md  RELEASE.md  TUNING.md
docs/parity/: attribution-2026-07-05.md  contribution.json  editdist_bins.json  looping-fix-remeasure-2026-07-11.md  moderate-tail-attribution-2026-07-11.md  parsing_audit.md  retry-experiment-2026-07-06.md  rswa-spike-verdict-2026-07-11.md  text-editdist-rootcause-2026-07-12.md  vllm-rocm-rswa-blocker-2026-07-11.md
docs/parity/evidence/: phase0_rswa_ablation_results.json
docs/superpowers/: HANDOFF-pytorch-eval-2026-07-11.md  HANDOFF-sglang-native-moe.md  HANDOFF-vllm-rocm-2026-07-09.md  HANDOFF-vllm-rocm-2026-07-10.md  SUMMARY-sglang-v16-eval-2026-07-09.md
docs/upstream/: baidu-amd-rocm-issue.md  issue-66-text-gap-engagement-2026-07-15.md  sglang-amd-consumer-gpu-contribution.md  sglang-greedy-divergence-from-hf-issue.md  sglang-radeon-rdna-status-2026-07-09.md  sglang-rocm-enablement.md
eval/configs/: omnidocbench_v16.yaml
eval/results/: manifest.schema.json  pinned_weights.txt  pytorch-v1.6-142da29774__142da29774__2026-07-05.yaml  pytorch-v1.6-fast-postfix__f358377450__2026-07-11.yaml  pytorch-v1.6-fast__953dcb16b5__2026-07-11.yaml  pytorch-v1.6-leaderboard__6f6c94b74d__2026-07-11.yaml  pytorch-v1.6-textfix__4464866346__2026-07-12.yaml  pytorch-v1.6__003a0dd58d__2026-07-03.yaml  pytorch-v1.6__4f8c5eb7ea__2026-07-03.yaml
examples/: README.md  sglang_client.py  sglang_server.sh  transformers_infer.py
model_scope_demo/: app.py  requirements.txt
patches/vllm/: README.md
scripts/: accuracy_benchmark.py  apply_patches.sh  benchmark.sh  benchmark_doc_types.py  benchmark_multi_page.py  benchmark_results.json  eval_omnidocbench.py  full_benchmark.py  install_sglang_serve_venv.sh  install_vllm_rocm.sh  measure_speed.py  run_identity_gate.py  run_omnidocbench_4gpu.sh  run_omnidocbench_direct.py  run_omnidocbench_fast.py  run_omnidocbench_sglang.py  run_omnidocbench_sglang_4gpu.sh  run_omnidocbench_vllm.py  run_omnidocbench_vllm_4gpu.sh  score_and_gate.py  setup_rocm.sh  sglang_serve.sh  sglang_serve_native.py  validate_manifests.py  vllm_serve.sh  vllm_server.py
scripts/analysis/: contribution_decomp.py  editdist_distribution.py  inspect_match.py  moderate_tail_decomp.py  patch_omnidocbench_dump.py  sglang_ref_embed_dump.py  sglang_singlepage_diff.py  sglang_vs_pytorch_diff.py  text_editdist_rootcause.py  vllm_vs_pytorch_diff.py
scripts/rswa_spike/: pages.py  phase0_ablation.py
src/rocm_ocr/: __init__.py  __main__.py  batching.py  benchmark.py  cli.py  config.py  decoding_contract.py  engine.py  eval_manifest.py  gate.py  gpu.py  identity_gate.py  image.py  infer.py  infer_async.py  logging.py  omnidocbench.py  pdf.py  postprocess.py  release.py  repetition_fix.py  retry.py  scheduler.py  server.py  server_vllm.py  sglang_conv_template.py  sglang_jit_native.py  sglang_mm_debug.py  sglang_native_moe.py  types.py  vllm_logits.py  vllm_patches.py  weights.py
tests/: conftest.py  test_batching.py  test_benchmark.py  test_cli.py  test_decoding_contract.py  test_engine.py  test_eval_manifest.py  test_gate.py  test_gpu.py  test_identity_gate.py  test_image.py  test_infer.py  test_infer_async.py  test_logging.py  test_moderate_tail_decomp.py  test_omnidocbench.py  test_patch_omnidocbench_dump.py  test_pdf.py  test_postprocess.py  test_release.py  test_repetition_fix.py  test_retry.py  test_run_omnidocbench_fast.py  test_run_omnidocbench_sglang.py  test_run_omnidocbench_vllm.py  test_scheduler.py  test_score_and_gate.py  test_server.py  test_sglang_jit_native.py  test_sglang_native_moe.py  test_sglang_vs_pytorch_diff.py  test_text_editdist_rootcause.py  test_validate_manifests.py  test_vllm_logits.py  test_vllm_patches.py  test_vllm_vs_pytorch_diff.py  test_weights.py
tests/rswa_spike/: test_pages.py  test_verdict.py
(+31 files in other folders)
