[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unlimited-ocr-rocm"
version = "1.0.0"
description = "Run Baidu Unlimited-OCR on AMD ROCm GPUs — one command."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "aiwork4me"},
]
keywords = ["ocr", "rocm", "amd", "vision-language-model", "sglang", "deepseek-ocr"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.0",
    "transformers>=4.57.1",
    "Pillow>=12.0.0",
    "einops>=0.8.0",
    "addict>=2.4.0",
    "easydict>=1.13",
    "pymupdf>=1.24.0",
    "psutil>=7.0.0",
    "sglang[all]>=0.4.0",
    "kernels>=0.11.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout",
    "ruff>=0.5.0",
]

[project.scripts]
unlimited-ocr = "rocm_ocr.cli:main"

[project.urls]
Homepage = "https://github.com/AIwork4me/Unlimited-OCR-ROCm"
"Bug Tracker" = "https://github.com/AIwork4me/Unlimited-OCR-ROCm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rocm_ocr"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 600
