[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unlimited-ocr-rocm"
version = "1.3.0"
description = "Run Baidu Unlimited-OCR on AMD ROCm GPUs — one command."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "aiwork4me"},
]
keywords = ["ocr", "rocm", "amd", "vision-language-model", "sglang", "deepseek-ocr"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.0",
    "transformers>=4.57.1",
    "Pillow>=12.0.0",
    "einops>=0.8.0",
    "addict>=2.4.0",
    "easydict>=1.13",
    "pymupdf>=1.24.0",
    "psutil>=7.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout",
    "pytest-cov",
    "pytest-asyncio",
    "ruff>=0.5.0",
    "mypy>=1.0",
    "jsonschema>=4.18",
    "pre-commit>=3.0",
]
sglang = [
    "sglang[all]>=0.4.0",
    "kernels>=0.11.0",
]

[project.scripts]
unlimited-ocr = "rocm_ocr.cli:main"

[project.urls]
Homepage = "https://github.com/AIwork4me/Unlimited-OCR-ROCm"
"Bug Tracker" = "https://github.com/AIwork4me/Unlimited-OCR-ROCm/issues"
Documentation = "https://github.com/AIwork4me/Unlimited-OCR-ROCm#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/rocm_ocr"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 600
asyncio_mode = "auto"
pythonpath = ["src", "."]

[tool.coverage.run]
source = ["src/rocm_ocr"]
omit = ["tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
exclude = ["tests/"]
